fix overflow bug on mobile

--- a/Front-End/assets/css/age-check.css
+++ b/Front-End/assets/css/age-check.css
@@ -1,68 +1,71 @@
 *,
 *::after,
 *::before {
-  box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+html,
+body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
 body:has(#view-age-check.active) {
-  height: 100vh;
-  overflow: hidden;
+    height: 100svh;
+    width: 100svw;
+    overflow: hidden;
 }
 
 #view-age-check {
-  position: relative;
-  display: none;
-  z-index: 9999;
+    position: fixed;
+    inset: 0;
+    display: none;
+    z-index: 9999;
 }
 
 #view-age-check.active {
-  display: block;
+    display: block;
 }
 
 .form {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .date-wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 #age-check-birthdate {
-  font-size: 3rem;
+    font-size: 2rem;
 }
 
-label[for="age-check-birthdate"] {
-  font-size: 1.5rem;
-  padding-inline: 1.5em;
+label[for='age-check-birthdate'] {
+    font-size: 1.5rem;
+    padding-inline: 1.5em;
 }
 
 .form-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--clr-main-100);
-  border-radius: 4rem;
-  min-height: 60vh;
-  min-width: 70vw;
-  z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--clr-main-100);
+    border-radius: 4rem;
+    min-height: 60vh;
+    min-width: 70vw;
+    z-index: 1;
 }
 
-.form::before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
+.backdrop {
+    position: absolute;
+    inset: 0;
 
-  transform: translate(-50%, -50%);
-
-  width: 100vw;
-  height: 100vh;
-  backdrop-filter: blur(30px);
-  z-index: -1;
+    backdrop-filter: blur(30px);
+    z-index: -1;
 }
